--- a/index.html
+++ b/index.html
@@ -3,167 +3,202 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ACF — RDR Map Editor</title>
+  <title>ACF • RDR Map Editor</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
+
 <body>
-  <header class="topbar">
-    <div class="brand">
-      <div class="brand__mark">ACF</div>
-      <div class="brand__text">
-        <div class="brand__title">A Cowboy’s Frontier</div>
-        <div class="brand__sub">RP Map • Explore • Search • Inspect</div>
-      </div>
-    </div>
+  <div class="app">
 
-    <div class="topbar__center">
-      <div class="search">
-        <input id="searchInput" type="search" placeholder="Search places, houses, POIs…" autocomplete="off" />
-        <button id="clearSearch" class="btn btn--ghost" title="Clear">✕</button>
-      </div>
-
-      <select id="typeFilter" class="select">
-        <option value="all">All Types</option>
-      </select>
-
-      <button id="resetView" class="btn">Reset</button>
-      <button id="toggleSidebar" class="btn btn--ghost">Sidebar</button>
-    </div>
-
-    <div class="topbar__right">
-      <!-- Always visible until /api/me says logged in -->
-      <a id="loginCta" class="cta" href="/api/login">
-        Are you a map editor? <b>Click here</b> to sign in
-      </a>
-
-      <div id="userChip" class="userchip userchip--hidden">
-        <span id="userName" class="userchip__name">—</span>
-        <button id="openEditor" class="btn btn--gold">Editor</button>
-        <button id="logoutBtn" class="btn btn--ghost">Logout</button>
-      </div>
-    </div>
-  </header>
-
-  <main class="layout">
-    <aside id="sidebar" class="sidebar">
-      <div class="sidebar__section">
-        <div class="sidebar__title">Quick Stats</div>
-        <div class="stats">
-          <div class="stat"><div class="stat__num" id="statTotal">—</div><div class="stat__label">Items</div></div>
-          <div class="stat"><div class="stat__num" id="statShown">—</div><div class="stat__label">Shown</div></div>
-          <div class="stat"><div class="stat__num" id="statTypes">—</div><div class="stat__label">Types</div></div>
+    <!-- Top Command Bar -->
+    <header class="top">
+      <div class="top__left">
+        <div class="logo">
+          <div class="logo__badge">ACF</div>
+          <div class="logo__meta">
+            <div class="logo__title">A Cowboy’s Frontier</div>
+            <div class="logo__sub">RDR Map Editor</div>
+          </div>
         </div>
       </div>
 
-      <div class="sidebar__section">
-        <div class="sidebar__title">Results</div>
-        <div id="results" class="results"></div>
-      </div>
+      <div class="top__center">
+        <div class="searchbar">
+          <span class="ic">⌕</span>
+          <input id="q" type="search" placeholder="Search markers (name/type/notes)..." autocomplete="off" />
+          <button id="qClear" class="iconBtn" title="Clear search">✕</button>
+        </div>
 
-      <div class="sidebar__footer">
-        <div class="hint"><b>Tips:</b> Scroll to zoom • Drag to pan • Click markers to inspect</div>
-      </div>
-    </aside>
+        <select id="type" class="pillSelect" title="Type filter">
+          <option value="all">All Types</option>
+        </select>
 
-    <section class="stage">
-      <div id="mapWrap" class="mapWrap">
-        <img id="mapImage" class="mapImage" src="./assets/rdo-map.jpeg" alt="RDO Map" />
-        <div id="markerLayer" class="markerLayer"></div>
-
-        <div class="hud">
-          <div class="pill" id="hudCoords">x: — y: —</div>
-          <div class="pill" id="hudZoom">zoom: 1.00</div>
-          <div class="pill pill--muted" id="hudMode">mode: browse</div>
-          <div class="pill pill--warn" id="hudDirty" style="display:none;">unsaved changes</div>
+        <div class="chipRow">
+          <button id="btnReset" class="chipBtn" title="Reset view (R)">Reset</button>
+          <button id="btnFocus" class="chipBtn" title="Focus selected (F)" disabled>Focus</button>
         </div>
       </div>
 
-      <div id="inspector" class="inspector inspector--hidden">
-        <div class="inspector__head">
-          <div class="inspector__title" id="insTitle">Inspect</div>
-          <button id="closeInspector" class="btn btn--ghost">Close</button>
-        </div>
-        <div class="inspector__body" id="insBody"></div>
-      </div>
+      <div class="top__right">
+        <a id="loginCta" class="loginCta" href="/api/login">
+          Are you a map editor? <b>Click here</b> to sign in
+        </a>
 
-      <div id="editorPanel" class="editor editor--hidden">
-        <div class="editor__head">
-          <div class="editor__title">Map Editor</div>
-          <div class="editor__headBtns">
-            <button id="collapseEditor" class="btn btn--ghost">Collapse</button>
-            <button id="closeEditor" class="btn btn--ghost">Close</button>
+        <div id="userBox" class="userBox isHidden">
+          <div class="userBox__name" id="userName">@user</div>
+          <button id="btnEditor" class="primaryBtn" disabled>Editor</button>
+          <button id="btnLogout" class="iconBtn" title="Logout">⎋</button>
+        </div>
+      </div>
+    </header>
+
+    <!-- Body -->
+    <div class="body">
+
+      <!-- Left Explorer -->
+      <aside id="left" class="panel left">
+        <div class="panel__head">
+          <div class="panel__title">Explorer</div>
+          <div class="panel__meta">
+            <span class="kpi"><b id="kTotal">—</b><span>Items</span></span>
+            <span class="kpi"><b id="kShown">—</b><span>Shown</span></span>
+            <span class="kpi"><b id="kTypes">—</b><span>Types</span></span>
           </div>
         </div>
 
-        <div id="editorBody" class="editor__body">
-          <div class="editor__section">
-            <div class="editor__label">Mode</div>
-            <div class="seg">
-              <button class="seg__btn seg__btn--active" data-mode="browse">Browse</button>
-              <button class="seg__btn" data-mode="add">Add</button>
-              <button class="seg__btn" data-mode="delete">Delete</button>
+        <div class="panel__section">
+          <div class="sectionTitle">Results</div>
+          <div id="results" class="list"></div>
+        </div>
+
+        <div class="panel__foot">
+          <div class="hint">
+            <b>Tips</b>: Scroll to zoom • Drag to pan • Click marker to inspect<br/>
+            <span class="muted">Shortcuts:</span> <span class="mono">R</span> reset • <span class="mono">F</span> focus • <span class="mono">Esc</span> close panels
+          </div>
+        </div>
+      </aside>
+
+      <div class="splitHandle" id="splitLeft" title="Drag to resize"></div>
+
+      <!-- Center Map -->
+      <main class="center">
+        <div id="map" class="map">
+          <img id="mapImg" src="./assets/rdo-map.jpeg" alt="RDO Map" />
+          <div id="layer" class="layer"></div>
+
+          <!-- Minimap -->
+          <div class="mini">
+            <div class="mini__title">Minimap</div>
+            <div class="mini__box">
+              <img id="miniImg" src="./assets/rdo-map.jpeg" alt="Minimap" />
+              <div id="miniView" class="mini__view"></div>
             </div>
-            <div class="editor__help" id="modeHelp">Browse: click markers to inspect.</div>
           </div>
 
-          <div class="editor__section">
-            <div class="editor__label">New Marker</div>
+          <!-- Tool Dock -->
+          <div class="dock">
+            <button class="dockBtn isActive" data-tool="browse" title="Browse (1)">Browse</button>
+            <button class="dockBtn" data-tool="add" title="Add (2)" id="toolAdd" disabled>Add</button>
+            <button class="dockBtn" data-tool="delete" title="Delete (3)" id="toolDel" disabled>Delete</button>
+            <div class="dockSep"></div>
+            <button class="dockBtn" id="btnUndo" title="Undo last add" disabled>Undo</button>
+            <button class="dockBtn dockBtn--gold" id="btnSave" title="Save changes" disabled>Save</button>
+          </div>
+
+          <!-- HUD -->
+          <div class="hud">
+            <div class="hudPill" id="hudCoords">x: — y: —</div>
+            <div class="hudPill" id="hudZoom">zoom: 1.00</div>
+            <div class="hudPill hudPill--muted" id="hudMode">mode: browse</div>
+            <div class="hudPill hudPill--warn" id="hudDirty" style="display:none;">unsaved</div>
+          </div>
+
+          <!-- Crosshair for placing -->
+          <div id="crosshair" class="crosshair isHidden"></div>
+
+          <!-- Nice overlay states -->
+          <div id="overlay" class="overlay isHidden">
+            <div class="overlay__card">
+              <div class="overlay__title" id="ovTitle">Loading…</div>
+              <div class="overlay__desc" id="ovDesc">Fetching map data.</div>
+              <div class="overlay__actions" id="ovActions"></div>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <div class="splitHandle" id="splitRight" title="Drag to resize"></div>
+
+      <!-- Right Inspector / Editor -->
+      <aside id="right" class="panel right">
+        <div class="tabs">
+          <button class="tab isActive" data-tab="inspect">Inspect</button>
+          <button class="tab" data-tab="editor" id="tabEditor" disabled>Editor</button>
+        </div>
+
+        <div id="inspectTab" class="tabBody">
+          <div class="panel__head">
+            <div class="panel__title" id="insTitle">Nothing selected</div>
+            <div class="panel__sub" id="insSub">Click a marker to see details.</div>
+          </div>
+          <div class="panel__section">
+            <div id="insBody" class="kv"></div>
+          </div>
+        </div>
+
+        <div id="editorTab" class="tabBody isHidden">
+          <div class="panel__head">
+            <div class="panel__title">Editor</div>
+            <div class="panel__sub">Add / delete markers and save to GitHub via your API.</div>
+          </div>
+
+          <div class="panel__section">
+            <div class="sectionTitle">New Marker</div>
             <div class="form">
-              <label class="field">
+              <label>
                 <span>Name</span>
                 <input id="mName" type="text" placeholder="Valentine Rental" />
               </label>
-
-              <label class="field">
+              <label>
                 <span>Type</span>
                 <input id="mType" type="text" placeholder="House / Shop / POI" />
               </label>
-
-              <label class="field">
+              <label>
                 <span>Notes</span>
                 <textarea id="mNotes" rows="3" placeholder="Optional notes…"></textarea>
               </label>
-
               <div class="row">
-                <button id="cancelPlace" class="btn btn--ghost" disabled>Cancel placing</button>
-                <button id="startPlace" class="btn btn--gold">Click map to place</button>
+                <button id="btnPlace" class="primaryBtn" disabled>Click map to place</button>
+                <button id="btnCancelPlace" class="chipBtn" disabled>Cancel</button>
               </div>
             </div>
           </div>
 
-          <div class="editor__section">
-            <div class="editor__label">Selected</div>
-            <div class="selectedBox" id="selectedBox">
-              <div class="mutedSmall">No marker selected.</div>
-            </div>
+          <div class="panel__section">
+            <div class="sectionTitle">Selected</div>
+            <div id="selBox" class="selBox">No marker selected.</div>
             <div class="row">
-              <button id="deleteSelected" class="btn btn--danger" disabled>Delete selected</button>
+              <button id="btnDeleteSel" class="dangerBtn" disabled>Delete selected</button>
+              <button id="btnFocusSel" class="chipBtn" disabled>Focus</button>
             </div>
           </div>
 
-          <div class="editor__section">
-            <div class="editor__label">Save</div>
-            <div class="row">
-              <button id="reloadMap" class="btn btn--ghost">Reload</button>
-              <button id="saveMap" class="btn btn--gold" disabled>Save changes</button>
-            </div>
-            <div class="editor__help mutedSmall" id="saveHint">Uses your existing /api/save (no API changes).</div>
-          </div>
-
-          <div class="editor__section">
-            <div class="editor__label">Marker List (scroll)</div>
-            <div id="editorList" class="editorList"></div>
+          <div class="panel__section">
+            <div class="sectionTitle">All markers</div>
+            <div id="editorList" class="list list--tight"></div>
           </div>
         </div>
-      </div>
-    </section>
-  </main>
+      </aside>
 
-  <footer class="footer">
-    <span>© A Cowboy’s Frontier</span>
-    <span class="dot">•</span>
-    <span class="muted">Hosted on Vercel</span>
-  </footer>
+    </div>
+
+    <footer class="foot">
+      <span>© A Cowboy’s Frontier</span>
+      <span class="dot">•</span>
+      <span class="muted">Hosted on Vercel</span>
+    </footer>
+  </div>
 
   <script src="./app.js"></script>
 </body>
